objects/Printer__c.object
<CustomObject>
    <label>Printer</label>
    <nameField>
        <label>Printer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Printers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Ink_Status__c</fullName>
        <label>Ink Status</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printer_Model__c</fullName>
        <label>Printer Model</label>
        <length>123</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>34</length>
        <type>Text</type>
    </fields>
</CustomObject>